// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comparator field should render default Comparator 1`] = `
<div
  className="theme-comparator"
>
  <withI18nextTranslation(ActionDropdown)
    hideLabel={false}
    items={
      Array [
        Object {
          "icon": "talend-greater-than",
          "id": "comparison-operator-0",
          "label": <OperatorListElement
            icon="talend-greater-than"
            name=""
            selected={false}
            symbol=">"
          />,
          "title": ">",
          "value": ">",
        },
        Object {
          "icon": "talend-less-than",
          "id": "comparison-operator-1",
          "label": <OperatorListElement
            icon="talend-less-than"
            name=""
            selected={false}
            symbol="<"
          />,
          "title": "<",
          "value": "<",
        },
        Object {
          "icon": "talend-equal",
          "id": "comparison-operator-2",
          "label": <OperatorListElement
            icon="talend-equal"
            name=""
            selected={false}
            symbol="="
          />,
          "title": "=",
          "value": "=",
        },
      ]
    }
    noCaret={true}
    onSelect={[Function]}
  />
  <Widget
    errors={Object {}}
    id="default"
    isValid={true}
    onChange={[Function]}
    onFinish={[Function]}
    schema={
      Object {
        "key": Array [
          "default",
          "value",
        ],
        "required": true,
        "schema": Object {
          "type": "string",
        },
        "title": "Default comparator",
        "type": "text",
      }
    }
    value={Object {}}
    widgets={Object {}}
  />
</div>
`;

exports[`Comparator field should render disabled Comparator 1`] = `
<div
  className="theme-comparator"
>
  <withI18nextTranslation(ActionDropdown)
    disabled={true}
    hideLabel={false}
    items={
      Array [
        Object {
          "icon": "talend-greater-than",
          "id": "comparison-operator-0",
          "label": <OperatorListElement
            icon="talend-greater-than"
            name=""
            selected={false}
            symbol=">"
          />,
          "title": ">",
          "value": ">",
        },
        Object {
          "icon": "talend-less-than",
          "id": "comparison-operator-1",
          "label": <OperatorListElement
            icon="talend-less-than"
            name=""
            selected={false}
            symbol="<"
          />,
          "title": "<",
          "value": "<",
        },
        Object {
          "icon": "talend-equal",
          "id": "comparison-operator-2",
          "label": <OperatorListElement
            icon="talend-equal"
            name=""
            selected={false}
            symbol="="
          />,
          "title": "=",
          "value": "=",
        },
      ]
    }
    noCaret={true}
    onSelect={[Function]}
  />
  <Widget
    errors={Object {}}
    id="default"
    isValid={true}
    onChange={[Function]}
    onFinish={[Function]}
    schema={
      Object {
        "disabled": true,
        "key": Array [
          "default",
          "value",
        ],
        "required": true,
        "schema": Object {
          "type": "string",
        },
        "title": "Default comparator",
        "type": "text",
      }
    }
    value={Object {}}
    widgets={Object {}}
  />
</div>
`;
